Added mediaitem category detection
